--- a/static/index.html
+++ b/static/index.html
@@ -33,7 +33,7 @@
                 <img src="https://go.dev/blog/go-brand/Go-Logo/PNG/Go-Logo_Blue.png" alt="Go" width="22">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript" width="22">
             </div>
-            <a href="YOUR_GITHUB_REPO_LINK" target="_blank" title="GitHub Repo">
+            <a href="https://github.com/Pookie-n-Rookie/Repliqate" target="_blank" title="GitHub Repo">
                 <img src="https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png" alt="GitHub" width="22"> View on GitHub
             </a>
         </div>
